# prism

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  NOTES-oss-release.md  README-PKI.md  README.md  apt-requirements.txt  pyproject.toml  requirements.txt  setup.py  shell.nix  versions.md
bebo/: .flake8  .gitignore  Makefile  README.rst  REST-API.txt  build-complete.sh  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  seeds.json  set_aliases
bebo/bebo/: Dockerfile-complete  __init__.py  complete.py  decode.py  delete.py  lruqueue.py  protocol.py  read.py  seeds.py  seeds_server.py  server.py  storage.py  stress.py  util.py  write.py  write_cbor.py  write_jpeg.py
bebo/bebo/static/css/: main.css
bebo/bebo/static/js/: main.js
bebo/bebo/templates/: index.html  layout.html
bebo/tests/: test_bebo.py  test_mpr.py  test_protocol.py  test_seeds.py  test_storage.py  test_util.py
bebo/util/: dump_message.py
bfibe/: README.md
bfibe/app/: benchmark.c  genibe.c  genprivatekey.c
bfibe/cmake/: FindGMP.cmake  FindPBC.cmake
bfibe/include/: api.h  bfibe.h
bfibe/jni/: bfibejni.c
bfibe/src/: api.c  base64.c  base64.h  bfibe.c  export.c  hash.c  hash.h  security.c  security.h
client-frontend/: .gitignore  README.md  package.json  vite.config.js
client-frontend/src/: App.svelte  Contacts.svelte  Conversation.svelte  Message.svelte  Sidebar.svelte  global.css  index.html  main.js  store.js  util.js
docker/prism/: Dockerfile  (+1 more)
docker/prism-base/: Dockerfile  Dockerfile.dockerignore
integration-tests/: .gitignore  README.md
(+224 files in other folders)
