[tool.poetry]
name = "bebo"
version = "0.1.0"
description = "BEBO"
authors = ["Bob Halley <bob.halley@sri.com>"]

[tool.poetry.dependencies]
python = "^3.7"
quart_trio = "^0.5.1"
requests = {extras = ["security"], version = "^2.23.0"}
cbor2 = "^5.1.0"
certifi = "^2020.4.5"
cryptography = "^2.9.2"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
mypy = "^0.770"
flake8 = "^3.7.9"
coverage = "^5.1"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
server = "bebo.server:main"
stress = "bebo.stress:main"
read = "bebo.read:main"
write = "bebo.write:main"
seeds = "bebo.seeds_server:main"
complete = "bebo.complete:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

